fixed minor bug with autosearch not showing up on profiles. added some styling to dropdown

--- a/app/assets/stylesheets/results.css
+++ b/app/assets/stylesheets/results.css
@@ -1,5 +1,5 @@
 #allresults{
-	z-index: 110000;
+	z-index: 11000;
 	position:absolute;
 	background-color: rgba(0,0,0,.8);
 	color:white;
@@ -9,6 +9,7 @@
 	margin-left:20%;
 	padding-right: 2%;
 	padding-left: 2%;
+	padding-bottom: 5px;
 	width: 40%;
 	visibility:hidden;
 }
@@ -21,4 +22,21 @@
 #allresults h3, p{
 	display:inline;
 	vertical-align: bottom;
+}
+
+#allresults h5{
+	margin:0px;
+	padding:3px;
+}
+#allresults h5:hover{
+	background-color: rgba(256,256,256,.8);
+}
+
+#search-notif{
+	font-size: 10px;
+	float: right;
+	float: bottom;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+	margin-right: 2px;
 }
